# Dice-Duel

./: .gitignore  CMakeLists.txt  README.md
src/: game.cpp  game.hpp  main.cpp
tests/: test_game.cpp
tests/doctest/: doctest.h
